INTERLOK-4088 Uprade to Junit 5
Upgrade gradle wrapper to 7.6.1